[project]
name = "lattica-core"
version = "0.1.0"
description = " Lattica core contracts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "eth_account>=0.13",
  "pyyaml>=6.0",
  "snekmate>=0.1.2",
  "titanoboa>=0.1.9",
  "vyper>=0.4.3",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mamushi",
    "pytest",
    "ruff",
    "types-PyYAML",
    "vyper-language-server",
]
lint = ["mamushi", "ruff"]
test = ["pytest"]

[tool.mamushi]
line_length = 100

[tool.pytest]
addopts = ["--tb=short", "-v"]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.uv.sources]
vyper-language-server = { git = "https://github.com/latticafi/vyper-language-server" }
